# aoc2019

./: wake.sh
Day1/: Day1.cabal
Day1/src/: Main.hs
Day11/: Day11.cabal
Day11/data/: test.txt
Day11/src/: IntCode.hs  Main.hs
Day2/: Day2.cabal
Day2/src/: Main.hs
Day3/: Day3.cabal  stack.yaml
Day3/data/: p1-parse.txt
Day3/src/: Main.hs
Day4/: Day4.cabal
Day4/data/: testcases.txt
Day4/src/: Intcode.hs  Main.hs
Day5/data/: part1-worked.txt
Day5/src/: Main.hs
Day6/: Day6.cabal
Day6/data/: test-simple.txt
Day6/src/: Main.hs
Day7/: Day7.cabal
Day7/src/: IntCode.hs  Main.hs
Day9/: Day9.cabal
Day9/src/: IntCode.hs  Main.hs
