name:                Day3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Day3#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Day3
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
    base >= 4.7 && < 5,
    parsec == 3.1.14.0,
    containers >= 0.6.0.1,
    text >= 1.2.3.1
